more img lazyload. masleidos layout shift fix. By @LuOsorio and @anibalpacheco

--- a/static/sass/components/_masleidos.scss
+++ b/static/sass/components/_masleidos.scss
@@ -2,6 +2,7 @@
 #mas-leidos {
     padding: 40px 0;
     background: #f3f3f3;
+    min-height: 340px;
 
 
     .card-header {
